Design form section layout Create initial form style

--- a/index.html
+++ b/index.html
@@ -24,10 +24,56 @@
     <div class="img-container">
       <div class="logo-container">
         <img src="logo.webp" alt="Reftadrones company logo" />
-        <span>REFTADRONES</span>
+        <div>
+          <p>REFTADRONES</p>
+        </div>
       </div>
     </div>
 
-    <div class="form-container">test</div>
+    <div class="form-container">
+      <div class="top-container">
+        <p><strong>This is NOT a real service!</strong></p>
+        <p>
+          Sign up for our agricultural drone service and boost your crop yields.
+          Our drones provide detailed data on crop health and assist with
+          targeted pesticide application. Don't miss out on this opportunity,
+          sign up now!
+        </p>
+        <p>You <em>know</em> you want to</p>
+      </div>
+      <div class="mid-container">
+        <p>Let's do this!</p>
+        <form>
+          <div>
+            <label for="first-name">FIRST NAME</label>
+            <input type="text" id="first-name" />
+          </div>
+          <div>
+            <label for="last-name">LAST NAME</label>
+            <input type="text" id="last-name" />
+          </div>
+          <div>
+            <label for="email">EMAIL</label>
+            <input type="email" id="email" />
+          </div>
+          <div>
+            <label for="tel">PHONE NUMBER</label>
+            <input type="tel" id="tel" />
+          </div>
+          <div>
+            <label for="password">PASSWORD</label>
+            <input type="password" id="password" />
+          </div>
+          <div>
+            <label for="confirm-password">CONFIRM PASSWORD</label>
+            <input type="password" id="confirm-password" />
+          </div>
+        </form>
+      </div>
+      <div class="bottom-container">
+        <button type="submit">Create Account</button>
+        <p><span>Already have an account?</span> <a href="#">Log in</a></p>
+      </div>
+    </div>
   </body>
 </html>
